Compatibilizando com a PEP 8

--- a/python/postgis/database.ini
+++ b/python/postgis/database.ini
@@ -1,5 +1,5 @@
 [postgresql]
-host=cartognu.org
-database=qwert
-user=kyle
-password=kyle2018
+host=10.180.146.150
+database=shapes_basicos
+user=postgres
+password=Escaravelho427323
