Inserindo manipulação e inserção de CSV

--- a/python/postgis/database.ini
+++ b/python/postgis/database.ini
@@ -1,5 +1,16 @@
 [postgresql]
-host=10.180.146.150
-database=shapes_basicos
+host=localhost
+port=5433
+database=GEO
 user=postgres
-password=Escaravelho427323
+password=
+
+[file_csv]
+path=/home/kylefelipe/qgis-tips-tricks/python/postgis/arquivo.csv
+delimiter=;
+key=municipio
+
+[table_csv]
+schema=shapes_basicos
+table=teste_csv
+key=municipio
