--- a/python/postgis/database.ini
+++ b/python/postgis/database.ini
@@ -1,16 +1,17 @@
 [postgresql]
-host=localhost
-port=5433
-database=GEO
+host=10.180.146.150
+port=5432
+database=shapes_basicos
 user=postgres
-password=
+password=Escaravelho427323
 
 [file_csv]
-path=/home/kylefelipe/qgis-tips-tricks/python/postgis/arquivo.csv
+path=/home/x12239181/qgis-tips-tricks/python/postgis/arquivo.csv
+
 delimiter=;
 key=municipio
 
 [table_csv]
-schema=shapes_basicos
+schema=public
 table=teste_csv
 key=municipio
