Inserido o join de tabelas

--- a/python/postgis/database.ini
+++ b/python/postgis/database.ini
@@ -7,7 +7,6 @@ password=Escaravelho427323
 
 [file_csv]
 path=/home/x12239181/qgis-tips-tricks/python/postgis/arquivo.csv
-
 delimiter=;
 key=municipio
 
@@ -15,3 +14,9 @@ key=municipio
 schema=public
 table=teste_csv
 key=municipio
+
+[join_table]
+schema=public
+table="Limites Municipais"
+key=geocodigo
+geometry=geom
